Fix legend text alignment on 'Applying Status' card

--- a/public/stylesheets/cards/applying-status.sass
+++ b/public/stylesheets/cards/applying-status.sass
@@ -50,15 +50,21 @@
 
 #status .legend>*
   float: left
-  width: 33%
+  width: 33.3%
+  display: flex
 
 #status .legend-marker
   display: inline-block
-  margin: 1rem 0
+  margin: 1rem 1rem 1rem 0
   width: 1rem
   height: 1rem
   border-radius: 50%
-  margin-right: 1rem
+
+#status .legend-interviewed
+  justify-content: center
+
+#status .legend-rejected
+  justify-content: flex-end
 
 #status .legend-hired .legend-marker
   background: $col-sb-contrast
@@ -73,6 +79,7 @@
   display: inline-block
   height: 100%
   line-height: 1.5rem
+  float: right
 
 #status .legend-text .stats
   font-weight: bold
